force-app/main/default/objects/CSS_Injector__mdt/CSS_Injector__mdt.object-meta.xml
<CustomObject>
    <description>This holds the css selectors and js code to dynamically inject into the page to alter your users OOTB Salesforce experience.</description>
    <label>CSS Injector</label>
    <pluralLabel>CSS Injectors</pluralLabel>
</CustomObject>