force-app/main/default/objects/CSS_Injector__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Do you want to activate this css rule or not?</description>
    <inlineHelpText>Do you want to activate this css rule or not?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>