force-app/main/default/objects/CSS_Injector__mdt/fields/Element_CSS__c.field-meta.xml
<CustomField>
    <fullName>Element_CSS__c</fullName>
    <description>This is the css you would like to add to the OOTB element you are overriding.</description>
    <inlineHelpText>This is the css you would like to add to the OOTB element you are overriding.</inlineHelpText>
    <label>Element CSS</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>