force-app/main/default/objects/CSS_Injector__mdt/fields/Element_Selector__c.field-meta.xml
<CustomField>
    <fullName>Element_Selector__c</fullName>
    <description>This is the selector for the element that you want to hide</description>
    <inlineHelpText>Enter the CSS Selector of the OOTB page element you would like to hide.</inlineHelpText>
    <label>Element Selector</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>